--- a/prodrivers/bootswatch.less
+++ b/prodrivers/bootswatch.less
@@ -446,10 +446,8 @@ a.list-group-item {
 
   }
 
-  @media screen and (min-width: @grid-float-breakpoint) {
-    h5 {
-      text-align: left;
-    }
+  @media screen and (max-width: @grid-float-breakpoint) {
+    text-align: center;
   }
 
 }
